--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -11,7 +11,7 @@ edition = "2021"
 tauri-build = { version = "1", features = [] }
 
 [dependencies]
-tauri = { version = "1", features = [ "window-set-fullscreen", "window-set-always-on-top", "dialog-all", "clipboard-write-text", "global-shortcut-all", "window-set-title", "shell-open"] }
+tauri = { version = "1", features = [ "window-create", "window-set-fullscreen", "window-set-always-on-top", "dialog-all", "clipboard-write-text", "global-shortcut-all", "window-set-title", "shell-open"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 
