--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@monaco-editor/react": "^4.6.0",
     "@radix-ui/react-checkbox": "^1.1.1",
+    "@tanstack/react-router": "^1.58.11",
     "@tauri-apps/api": "^1",
     "autoprefixer": "^10.4.20",
     "lucide-react": "^0.441.0",
@@ -24,11 +25,13 @@
     "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
+    "@tanstack/router-devtools": "^1.58.11",
+    "@tanstack/router-plugin": "^1.58.10",
+    "@tauri-apps/cli": "^1",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.2.1",
     "typescript": "^5.2.2",
-    "vite": "^5.3.1",
-    "@tauri-apps/cli": "^1"
+    "vite": "^5.3.1"
   }
 }
